1.3
  - add README.md support
  - add submodule support
  - add Smart HTTP and basic authentication support
1.2
  - add blame page
  - add blanch import feature
1.1
  - add import_rep script to import repositories.
1.0
  - first major release